--- a/spa/public/assets/css/theme-peticio-1.css
+++ b/spa/public/assets/css/theme-peticio-1.css
@@ -19,7 +19,7 @@ body {
 }
 
 main {
-    margin-top: 72px;
+    margin-top: 0px;
 }
 
 /* Custom page CSS
@@ -57,7 +57,7 @@ body.app-theme-art13,
 body.app-theme-default.action-login,
 body.app-theme-default.action-register {
     background-color: #990009;
-    background-image: url('/assets/img/protest_2.jpg');
+    background-image: url('/assets/img/protest.png');
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: left top;
