--- a/spa/public/assets/css/theme-art13-1.css
+++ b/spa/public/assets/css/theme-art13-1.css
@@ -15,6 +15,7 @@ nav.navbar {
 .footer {
     position: absolute;
     bottom: 0;
+    left:0px;
     width: 100%;
     height: 62px;
     line-height: 62px;
