--- a/spa/src/App/templates/layout/art13-1.phtml
+++ b/spa/src/App/templates/layout/art13-1.phtml
@@ -4,6 +4,7 @@ $this->headLink()
     ->prependStylesheet('https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css')
     ->appendStylesheet('/assets/css/theme-art13-1.css')
     ->appendStylesheet('/assets/css/bootstrap-multiselect.css')
+    ->appendStylesheet('/assets/css/bootstrap.switch.css')
     ->appendStylesheet('/assets/js/flipcountdown/jquery.flipcountdown.css')
 ;
 $this->inlineScript()
@@ -18,11 +19,16 @@ $this->inlineScript()
 if($this->hasIdentity()):
 
     $this->inlineScript()
+        ->appendFile('/assets/js/spa-ajax.js')
         ->appendFile('/assets/js/spa-editor.js')
         ->appendFile('/assets/js/secalith-zf-core.js')
         ->appendFile('/assets/js/secalith-zf-form.js')
         ->appendFile('/assets/js/spa-form.js')
         ->appendFile('/assets/js/spa-init.js')
+    ;
+
+    $this->headLink()
+        ->appendStylesheet('/assets/css/spa-editor.css')
     ;
 
 endif;
@@ -103,7 +109,7 @@ endif;
                             <a href="<?=$this->url('home')?>#events" class="nav-link scroll-trigger"><?=$this->translate("Events");?></a>
                         </li>
                         <li class="nav-item d-inline-block mt-2 p-0">
-                            <a href="#petition" class="nav-link scroll-trigger"><?=$this->translate("Petition");?></a>
+                            <a href="https://peticio.art13.eu" class="nav-link scroll-trigger"><?=$this->translate("Petition");?></a>
                         </li>
                         <li class="nav-item d-inline-block mt-2 p-0">
                             <a href="<?=$this->url('home')?>#information" class="nav-link scroll-trigger"><?=$this->translate("Information");?></a>
@@ -142,6 +148,21 @@ endif;
                             <a href="<?=$this->url('spa.auth.logout')?>" class="btn btn-secondary d-inline-block"><?=$this->translate("Sign Out");?></a>
                         </li>
                     </ul>
+                    <ul class="navbar-nav d-none d-md-inline-block">
+                        <li class="nav-item ml-3">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-info"><?=$this->translate("Edit");?></button>
+                                <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <span class="sr-only">Toggle Dropdown</span>
+                                </button>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item menu-item menu-item-area" href="#" data-item-type="area"><?=_("Area");?></a>
+                                    <a class="dropdown-item menu-item menu-item-block" href="#" data-item-type="block"><?=_("Block");?></a>
+                                    <a class="dropdown-item menu-item menu-item-content" href="#" data-item-type="content"><?=_("Content");?></a>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
                     <?php endif;?>
 
                 </div>
@@ -149,7 +170,6 @@ endif;
                 <div class="collapse navbar-collapse" id="navbarCollapse">
 
                     <ul class="navbar-nav mr-auto mt-2 d-md-none border-top">
-
                         <li class="nav-item">
                             <a href="<?=$this->url('home')?>#events" class="nav-link scroll-trigger"><?=$this->translate("Events");?></a>
                         </li>
@@ -164,7 +184,6 @@ endif;
                         <li class="nav-item d-block d-md-none border-top">
                             <a href="<?=$this->url('spa.auth.logout')?>" class="nav-link"><?=$this->translate("Sign Out");?></a>
                         </li>
-
                     </ul>
 
                 </div>
@@ -183,22 +202,53 @@ endif;
         </main>
     </div>
 
+
+    <div id="form-fixed-save-observer" class="hidden navbar navbar-expand-md navbar-light  fixed-bottom" style="position:fixed;bottom:0px;background: #000000;">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 py-3">
+                    <ul class="d-flex justify-content-between list-unstyled text-small mb-0">
+                        <li class="d-inline mr-4 text-light"><?=$this->translate("Content has changed. Do you want to save the progress?");?></li>
+                        <li class="d-inline mr-4"><a class="btn btn-danger" href="#"><?=$this->translate('Discard changes');?></a></li>
+                        <li class="d-inline mr-4"><a class="btn btn-success" href="#"><?=$this->translate('Save progress');?></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <footer class="app-footer footer">
         <div class="container">
             <div class="row">
                 <div class="col-12">
                     <ul class="d-flex justify-content-between list-unstyled text-small mb-0">
-                        <li class="d-inline mr-4"><a class="text-muted" href="#"><a href="<?=$this->url('home')?>" class="text-muted"><?=$this->translate("Homepage");?></a></a></li>
+                        <li class="d-inline mr-4"><a href="<?=$this->url('home')?>" class="text-muted"><?=$this->translate("Homepage");?></a></li>
                         <li class="d-inline mr-4"><a class="text-muted" href="#"><?=$this->translate('About');?></a></li>
                         <li class="d-inline mr-4"><a class="text-muted" href="/privacy-policy"><?=$this->translate('Privacy');?></a></li>
                         <li class="d-inline mr-4"><a class="text-muted" href="#"><?=$this->translate('T&C');?></a></li>
                         <?php if( $this->hasIdentity()):?>
                             <li class="d-inline mr-4"><a class="text-muted" href="<?=$this->url('spa.auth.logout')?>"><?=$this->translate("Sign Out");?></a></li>
                         <?php endif;?>
+                    </ul>
                 </div>
             </div>
         </div>
     </footer>
+
+    <div id="content-update-mode-switch" data-default="inline">
+        <span><?=_("Inline Edit");?></span>
+        <span class="switch p-2 pl-1">
+            <input type="checkbox" class="switch" checked="checked" id="switch-id" />
+            <label for="switch-id">&nbsp;</label>
+        </span>
+    </div>
+    <div id="content-update-autosave-switch" data-default="inline">
+        <span><?=_("Autosave");?></span>
+        <span class="switch p-2 pl-1">
+            <input type="checkbox" class="switch" id="switch-autosave" />
+            <label for="switch-autosave">&nbsp;</label>
+        </span>
+    </div>
 
     <div class="scroll-top-trigger-wrapper scroll-trigger" data-scroll-target="body">
         <img src="/assets/icons/iconic-1.1.10/png/arrow-circle-top-6x.png" alt="Top" />
