--- a/spa/src/App/templates/layout/peticio-1.phtml
+++ b/spa/src/App/templates/layout/peticio-1.phtml
@@ -89,10 +89,10 @@ endif;
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a href="<?=$this->url('peticio.home')?>" class="nav-link"><?=$this->translate("Homepage");?></a>
+                            <a href="<?=$this->url('home')?>" class="nav-link"><?=$this->translate("Homepage");?></a>
                         </li>
                         <li class="nav-item">
-                            <a href="<?=$this->url('peticio.home')?>#events" class="nav-link"><?=$this->translate("Events");?></a>
+                            <a href="<?=$this->url('home')?>#events" class="nav-link"><?=$this->translate("Events");?></a>
                         </li>
 
                         <li class="nav-item">
@@ -100,7 +100,7 @@ endif;
                         </li>
 
                         <li class="nav-item">
-                            <a href="<?=$this->url('peticio.home')?>#information" class="nav-link"><?=$this->translate("Information");?></a>
+                            <a href="<?=$this->url('home')?>#information" class="nav-link"><?=$this->translate("Information");?></a>
                         </li>
 
                     </ul>
