--- a/spa/src/App/templates/layout/peticio-1.phtml
+++ b/spa/src/App/templates/layout/peticio-1.phtml
@@ -89,18 +89,18 @@ endif;
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a href="<?=$this->url('home')?>" class="nav-link"><?=$this->translate("Homepage");?></a>
+                            <a href="https://art13.eu" class="nav-link"><?=$this->translate("Homepage");?></a>
                         </li>
                         <li class="nav-item">
-                            <a href="<?=$this->url('home')?>#events" class="nav-link"><?=$this->translate("Events");?></a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a href="http://peticio.art13.eu" class="nav-link"><?=$this->translate("Petition");?></a>
+                            <a href="https://art13.eu#events" class="nav-link"><?=$this->translate("Events");?></a>
                         </li>
 
                         <li class="nav-item">
-                            <a href="<?=$this->url('home')?>#information" class="nav-link"><?=$this->translate("Information");?></a>
+                            <a href="https://peticio.art13.eu" class="nav-link"><?=$this->translate("Petition");?></a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a href="https://art13.eu#information" class="nav-link"><?=$this->translate("Information");?></a>
                         </li>
 
                     </ul>
