--- a/spa/src/Petition/templates/petition/petition-form-sign.phtml
+++ b/spa/src/Petition/templates/petition/petition-form-sign.phtml
@@ -3,7 +3,7 @@
 $form->prepare();
 
 ?>
-<div id="petitionSignFormWrapper" class="form-container p-3 ml-4 float-right <?=($form->getMessages())?'form-has-errors ':null;?>float-right">
+<div id="petitionSignFormWrapper" class="form-container p-3 ml-md-4 float-right <?=($form->getMessages())?'form-has-errors ':null;?>float-right">
 
     <?=$this->form()->openTag($form);?>
 
