--- a/spa/src/Petition/templates/petition/petition-form-sign.phtml
+++ b/spa/src/Petition/templates/petition/petition-form-sign.phtml
@@ -25,7 +25,7 @@ $form->prepare();
             </div>
         </div>
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 mt-2">
                 <?=$this->formLabel($form->get('form')->get('email'));?>
             </div>
             <div class="col-12 <?=( ! empty($this->formElementErrors($form->get('form')->get('email'))))?'has-errors':'';?>">
