--- a/spa/src/App/templates/layout/peticio-1.phtml
+++ b/spa/src/App/templates/layout/peticio-1.phtml
@@ -157,7 +157,7 @@ endif;
             <div class="row">
                 <div class="col-12">
                     <ul class="d-flex justify-content-between list-unstyled text-small mb-0">
-                        <li class="d-inline mr-4"><a class="text-muted" href="#"><a href="<?=$this->url('peticio.home')?>" class="text-muted"><?=$this->translate("Homepage");?></a></a></li>
+                        <li class="d-inline mr-4"><a class="text-muted" href="#"><a href="/" class="text-muted"><?=$this->translate("Homepage");?></a></a></li>
                         <li class="d-inline mr-4"><a class="text-muted" href="#"><?=$this->translate('About');?></a></li>
                         <li class="d-inline mr-4"><a class="text-muted" href="/privacy-policy"><?=$this->translate('Privacy Policy');?></a></li>
                         <li class="d-inline mr-4"><a class="text-muted" href="#"><?=$this->translate('Terms and Conditions');?></a></li>
