[PR] saves petition_email_queue

--- a/spa/src/Petition/templates/petition/petition-item.phtml
+++ b/spa/src/Petition/templates/petition/petition-item.phtml
@@ -14,6 +14,15 @@
         <?=$this->markdown($translation->getText());?>
     </div>
     <div class="col-12 col-md-4">
+        <div class="float-right mb-4">
+            <a class="twitter-share-button"
+               href="https://twitter.com/intent/tweet?text=Hello%20world"
+               data-size="large">
+                Tweet</a>
+            <div class="fb-share-button" style="top:-8px;" data-href="https://petycja.art13.eu" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpetycja.art13.eu%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Partager</a></div>
+
+        </div>
+
         <?php if( isset($form) && array_key_exists('request',$form['form'])): ?>
             <h3><?=$this->markdown($this->translate("Signature has been recorded."));?></h3>
             <p><?=$this->markdown($this->translate("Thank you for your support!"));?></p>
