--- a/spa/src/Petition/templates/petition/petition-item.phtml
+++ b/spa/src/Petition/templates/petition/petition-item.phtml
@@ -19,7 +19,7 @@
                href="https://twitter.com/intent/tweet?text=Hello%20world"
                data-size="large">
                 Tweet</a>
-            <div class="fb-share-button" style="top:-8px;" data-href="https://petycja.art13.eu" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpetycja.art13.eu%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Partager</a></div>
+            <div class="fb-share-button" style="top:-8px;" data-href="https://peticio.art13.eu" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpetycja.art13.eu%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Partager</a></div>
 
         </div>
 
