--- a/spa/src/App/templates/layout/peticio-1.phtml
+++ b/spa/src/App/templates/layout/peticio-1.phtml
@@ -93,17 +93,8 @@ endif;
                     </a>
 
                     <ul class="navbar-nav d-none d-md-inline-block">
-                        <li class="nav-item d-none d-lg-inline-block mt-2 p-0">
-                            <a href="https://art13.eu" class="nav-link scroll-trigger"><?=$this->translate("Homepage");?></a>
-                        </li>
-                        <li class="nav-item d-inline-block mt-2 p-0">
-                            <a href="https://art13.eu#events" class="nav-link scroll-trigger"><?=$this->translate("Events");?></a>
-                        </li>
                         <li class="nav-item d-inline-block mt-2 p-0">
                             <a href="https://peticio.art13.eu" class="nav-link _scroll-trigger" target="_blank"><?=$this->translate("Petition");?></a>
-                        </li>
-                        <li class="nav-item d-inline-block mt-2 p-0">
-                            <a href="https://art13.eu#information" class="nav-link scroll-trigger"><?=$this->translate("Information");?></a>
                         </li>
                     </ul>
 
@@ -120,19 +111,9 @@ endif;
                 <div class="collapse navbar-collapse" id="navbarCollapse">
 
                     <ul class="navbar-nav mr-auto mt-2 d-md-none border-top">
-                        <li class="nav-item">
-                            <a href="https://art13.eu#events" class="nav-link scroll-trigger"><?=$this->translate("Events");?></a>
-                        </li>
 
                         <li class="nav-item">
-                            <a href="#petition" class="nav-link scroll-trigger"><?=$this->translate("Petition");?></a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a href="https://art13.eu#information" class="nav-link scroll-trigger"><?=$this->translate("Information");?></a>
-                        </li>
-                        <li class="nav-item d-block d-md-none border-top">
-                            <a href="<?=$this->url('spa.auth.logout')?>" class="nav-link"><?=$this->translate("Sign Out");?></a>
+                            <a href="https://peticio.art13.eu" class="nav-link scroll-trigger"><?=$this->translate("Petition");?></a>
                         </li>
                     </ul>
 
