--- a/spa/src/Petition/templates/petition/petition-form-sign.phtml
+++ b/spa/src/Petition/templates/petition/petition-form-sign.phtml
@@ -33,20 +33,22 @@ $form->prepare();
                 <?=$this->formElementErrors($form->get('form')->get('email'));?>
             </div>
         </div>
-        <div class="col-12 form-check py-2 px-4 <?=( ! empty($this->formElementErrors($form->get('form')->get('newsletter'))))?'has-errors':'';?>">
-            <?=$this->formCheckbox($form->get('form')->get('newsletter'));?>
-            <span class="ml-2">
+
+        <div class="row">
+            <div class="col-12 form-check px-4 pt-1 <?=( ! empty($this->formElementErrors($form->get('form')->get('newsletter'))))?'has-errors':'';?>">
+                <?=$this->formCheckbox($form->get('form')->get('newsletter'));?>
                 <?=$this->formLabel($form->get('form')->get('newsletter'));?>
-            </span>
-            <?=$this->formElementErrors($form->get('form')->get('newsletter'));?>
+                <?=$this->formElementErrors($form->get('form')->get('newsletter'));?>
+            </div>
         </div>
-        <div class="col-12 form-check py-2 px-4 <?=( ! empty($this->formElementErrors($form->get('form')->get('terms'))))?'has-errors':'';?>">
-            <?=$this->formCheckbox($form->get('form')->get('terms'));?>
-            <span class="ml-2">
+        <div class="row">
+            <div class="col-12 form-check px-4 pt-1 <?=( ! empty($this->formElementErrors($form->get('form')->get('terms'))))?'has-errors':'';?>">
+                <?=$this->formCheckbox($form->get('form')->get('terms'));?>
                 <?=$this->formLabel($form->get('form')->get('terms'));?>
-            </span>
-            <?=$this->formElementErrors($form->get('form')->get('terms'));?>
+                <?=$this->formElementErrors($form->get('form')->get('terms'));?>
+            </div>
         </div>
+
         <div class="row">
             <div class="col-12 mt-4">
                 <?=$this->formInput($form->get('submit'));?>
