--- a/spa/src/App/templates/layout/peticio-1.phtml
+++ b/spa/src/App/templates/layout/peticio-1.phtml
@@ -100,7 +100,7 @@ endif;
                             <a href="https://art13.eu#events" class="nav-link scroll-trigger"><?=$this->translate("Events");?></a>
                         </li>
                         <li class="nav-item d-inline-block mt-2 p-0">
-                            <a href="https://peticio.art13.eu" class="nav-link _scroll-trigger" target="_blank"><?=$this->translate("Petition");?></a>
+                            <a href="https://peticio.art13.eu" class="nav-link _scroll-trigger"><?=$this->translate("Petition");?></a>
                         </li>
                         <li class="nav-item d-inline-block mt-2 p-0">
                             <a href="https://art13.eu#information" class="nav-link scroll-trigger"><?=$this->translate("Information");?></a>
