[PR] privacy policy link on sign form

--- a/spa/src/Petition/templates/petition/petition-form-sign.phtml
+++ b/spa/src/Petition/templates/petition/petition-form-sign.phtml
@@ -50,7 +50,7 @@ $form->prepare();
         </div>
         <div class="row">
             <div class="col-12 form-check px-4 pt-1 <?=( ! empty($this->formElementErrors($form->get('form')->get('terms'))))?'has-errors':'';?>">
-                <a href="/privacy-policy"><?=$this->translate("Polityka Prywatnosci");?></a>
+                <a href="/privacy-policy" target="_blank"><?=$this->translate("Polityka Prywatnosci");?></a>
             </div>
         </div>
 
