--- a/spa/src/App/templates/layout/art13-1.phtml
+++ b/spa/src/App/templates/layout/art13-1.phtml
@@ -44,7 +44,7 @@ endif;
     <meta property="og:image" content="http://art13.eu/assets/img/1113.png"/>
     <meta property="og:image:secure_url" content="https://art13.eu/assets/img/1113.png" />
 
-    <?=$this->headTitle('Art. 11')->setSeparator(' - ')->setAutoEscape(false)?>
+    <?=$this->headTitle('Art. 11/13')->setSeparator(' - ')->setAutoEscape(false)?>
     <?=$this->headMeta()?>
     <?=$this->headLink()?>
 
