--- a/spa/src/App/templates/layout/peticio-1.phtml
+++ b/spa/src/App/templates/layout/peticio-1.phtml
@@ -47,7 +47,7 @@ endif;
     <meta name="msapplication-config" content="https://art13.eu/assets/favicons/1113/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <link rel="shortcut icon" href="https://art13.eu/assets/favicons/1113/favicon-32x32.png" />
-    <?=$this->headTitle('Art. 11')->setSeparator(' - ')->setAutoEscape(false)?>
+    <?=$this->headTitle('Art. 11/13')->setSeparator(' - ')->setAutoEscape(false)?>
     <?=$this->headMeta()?>
     <?=$this->headLink()?>
 </head>
