[PR] added stopacta logo

--- a/spa/src/Petition/templates/petition/petition-item.phtml
+++ b/spa/src/Petition/templates/petition/petition-item.phtml
@@ -39,8 +39,8 @@
             <?=$this->getFormAttached($form['form'],null,'data',true,'petition::petition-form-sign');?>
         </div>
         <?php endif;?>
-        <hr />
-        <div class="p-3 pt-2 py-2 d-block">
+        <hr class="mb-0" />
+        <div class="p-3 pt-1 py-2 d-block">
             <a href="https://www.facebook.com/Stopacta2.Poland/" target="_blank">
                 <img class="w-100 mt-3" src="https://peticio.art13.eu/assets/img/org/39075613.png" alt="#stopACTA2" />
             </a>
