[PR] updated meun links

--- a/spa/src/App/templates/layout/art13-1.phtml
+++ b/spa/src/App/templates/layout/art13-1.phtml
@@ -109,10 +109,10 @@ endif;
                             <a href="<?=$this->url('home')?>#events" class="nav-link scroll-trigger"><?=$this->translate("Events");?></a>
                         </li>
                         <li class="nav-item d-inline-block mt-2 p-0">
-                            <a href="https://peticio.art13.eu" class="nav-link _scroll-trigger" target="_blank"><?=$this->translate("Petition");?></a>
+                            <a href="https://peticio.art13.eu" class="nav-link" target="_blank"><?=$this->translate("Petition");?></a>
                         </li>
                         <li class="nav-item d-inline-block mt-2 p-0">
-                            <a href="<?=$this->url('home')?>#information" class="nav-link scroll-trigger"><?=$this->translate("Information");?></a>
+                            <a href="http://www.stopacta2.org/" class="nav-link" target="_blank"><?=$this->translate("Information");?></a>
                         </li>
                     </ul>
 
@@ -175,11 +175,11 @@ endif;
                         </li>
 
                         <li class="nav-item">
-                            <a href="#petition" class="nav-link scroll-trigger"><?=$this->translate("Petition");?></a>
+                            <a href="#petition" class="nav-link"><?=$this->translate("Petition");?></a>
                         </li>
 
                         <li class="nav-item">
-                            <a href="<?=$this->url('home')?>#information" class="nav-link scroll-trigger"><?=$this->translate("Information");?></a>
+                            <a href="http://www.stopacta2.org/" class="nav-link" target="_blank"><?=$this->translate("Information");?></a>
                         </li>
                         <li class="nav-item d-block d-md-none border-top">
                             <a href="<?=$this->url('spa.auth.logout')?>" class="nav-link"><?=$this->translate("Sign Out");?></a>
