--- a/spa/src/App/templates/layout/peticio-1.phtml
+++ b/spa/src/App/templates/layout/peticio-1.phtml
@@ -64,23 +64,47 @@ endif;
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
     </script>
-    <script>window.twttr = (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0],
-            t = window.twttr || {};
-        if (d.getElementById(id)) return t;
-        js = d.createElement(s);
-        js.id = id;
-        js.src = "https://platform.twitter.com/widgets.js";
-        fjs.parentNode.insertBefore(js, fjs);
+    <script>
+        window.twttr = (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0],
+                t = window.twttr || {};
+            if (d.getElementById(id)) return t;
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "https://platform.twitter.com/widgets.js";
+            fjs.parentNode.insertBefore(js, fjs);
 
-        t._e = [];
-        t.ready = function(f) {
-            t._e.push(f);
+            t._e = [];
+            t.ready = function(f) {
+                t._e.push(f);
+            };
+
+            return t;
+        }(document, "script", "twitter-wjs"));
+    </script>
+
+
+    <script>
+        window.fbAsyncInit = function() {
+            FB.init({
+                appId      : '1091717350996484',
+                cookie     : true,
+                xfbml      : true,
+                version    : 'v3.1'
+            });
+
+            FB.AppEvents.logPageView();
+
         };
 
-        return t;
-    }(document, "script", "twitter-wjs"));
-</script>
+        (function(d, s, id){
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) {return;}
+            js = d.createElement(s); js.id = id;
+            js.src = "https://connect.facebook.net/pl_PL/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
 
     <header class="app-header">
 
@@ -108,7 +132,7 @@ endif;
                     </ul>
 
                     <div class="d-inline-block m-0 mt-2 p-0">
-                        <span class="float-md-right mt-1 mr-0" id="time_counter-first" data-countdown="2018/08/26 18:00"></span>
+                        <span class="float-md-right mt-1 mr-0" id="time_counter-first" data-countdown="2018/09/12 12:00"></span>
                     </div>
 
                     <button type="button" class="navbar-toggler float-right " data-toggle="collapse" data-target="#navbarCollapse" aria-controls="#navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
